# openai_rag_jp

./: .gitignore  AGENTS.md  AGENTS_jp.md  CLAUDE.md  README.md  README_2.md  README_a50_qdrant.md  README_preparation.md  README_qdrant.md  README_qdrant_setup.md  a011_make_rag_data_customer.py  a014_make_rag_data_sciq.py  a01_load_non_qa_rag_data.py  a01_load_set_rag_data.py  a01_load_set_rag_data_trivia.py  a01_make_rag_data.py  a020_make_vsid.py  a02_make_vsid.py  a02_set_vector_store_vsid.py  a030_rag_search.py  a03_rag_search.py  a03_rag_search_cloud_vs.py  a10_00_responses_api.py  a10_show_qdrant_data.py  a20_check_all_server.py  a20_rag_search_cloud_vs.py  a20_show_all_server_data.py  a30_00_dl_dataset_from_huggingface.py  a30_011_make_rag_data_customer.py  a30_013_make_rag_data_medical.py  a30_014_make_rag_data_sciq.py  a30_015_make_rag_data_legal.py  a30_020_make_vsid.py  a30_30_rag_search.py  a30_qdrant_registration.py  a30_rag_search.py  a50_qdrant.py  a50_qdrant_customer.py  a50_qdrant_registration.py  a50_qdrant_search.py  (+19 more)
doc/: 06_01_RAG_step_guide_local.md  06_02_RAG_doc_chank_or_faq.md  06_embedding.md  a000_load_set_rag_data.md  a00_cloud_rag.md  a00_load_set_rag_data.md  a00_locad_set_data.md  a00_responses_api.md  a014_make_rag_data_sciq.md  a015_make_rag_data_legal.md  a01_load_non_qa_rag_data.md  a01_load_non_qa_rag_data_design.md  a01_load_set_rag_data.key  a01_load_set_rag_data.md  a02_set_vector_store_vsid.md  a03_rag_search_cloud_vs.md  a04_delete_vector_store.md  a10_show_qdrant_data.md  a20_rag_search_cloud_vs.md  a30_020_make_vsid.md  (+25 more)
(+6 files in other folders)
