[project]
name = "openai-rag-jp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "elasticsearch>=8.10.0",
    "fastapi>=0.116.1",
    "openai>=1.99.9",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.6.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "streamlit>=1.48.0",
    "uvicorn[standard]>=0.24.0",
]
